--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-LOGIN_API_KEY ="AIzaSyADbIP0a5-JsuWwyVJBBWJCUJWCfQcuvRs"
-AUTH_DOMAIN="moneytrackr-aeaa6.firebaseapp.com"
-PROJECT_ID="moneytrackr-aeaa6"
-STORAGE_BUCKET="moneytrackr-aeaa6.appspot.com"
-MESSAGING_SENDER_ID="781282600655"
-APP_ID="1:781282600655:web:c0af8778ab442e2a0939ba"
-MEASUREMENT_ID="G-RB6LTBJY7M"
+LOGIN_API_KEY =
+AUTH_DOMAIN=
+PROJECT_ID=
+STORAGE_BUCKET=
+MESSAGING_SENDER_ID=
+APP_ID=
+MEASUREMENT_ID=
 
-API_CRUD = "https://6537d0d6a543859d1bb0e4e3.mockapi.io/transaction"
+API_CRUD = 
+API_OPENAI =
