--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
+    "openai": "^4.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
