--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-LOGIN_API_KEY =
-AUTH_DOMAIN=
-PROJECT_ID=
-STORAGE_BUCKET=
-MESSAGING_SENDER_ID=
-APP_ID=
-MEASUREMENT_ID=
+VITE_LOGIN_API_KEY ="AIzaSyADbIP0a5-JsuWwyVJBBWJCUJWCfQcuvRs"
+VITE_AUTH_DOMAIN="moneytrackr-aeaa6.firebaseapp.com"
+VITE_PROJECT_ID="moneytrackr-aeaa6"
+VITE_STORAGE_BUCKET="moneytrackr-aeaa6.appspot.com"
+VITE_MESSAGING_SENDER_ID="781282600655"
+VITE_APP_ID="1:781282600655:web:c0af8778ab442e2a0939ba"
+VITE_MEASUREMENT_ID="G-RB6LTBJY7M"
 
-API_CRUD = 
-API_OPENAI =
+VITE_API_CRUD = "https://6537d0d6a543859d1bb0e4e3.mockapi.io/transaction"
+VITE_API_OPENAI ="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"
