--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.5.0",
     "openai": "^4.14.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0"
